--- a/style.css
+++ b/style.css
@@ -118,12 +118,13 @@ input[type=button]  {
 }
 */
 
-body          {
+html,body         {
   background:#ECEDEF;
 /*  padding-bottom:0px;
   padding-top:40px;
   */
 }
+
 .container  {
   height: 100%;
   max-width: 100%;
@@ -133,12 +134,13 @@ body          {
   border: 2px #F0FEFD;
   border-radius: 10px;
 }
+
 input[type=text] {
   background: none;
   border: none;
   box-shadow: none;
   outline: none;
-  padding: 20px 20px;
+height: 20%;
   width: 100%;
   border-bottom: 2px solid #111;
   color: #333;
@@ -146,9 +148,9 @@ input[type=text] {
   font-size: 40px;
   border-radius: 0;
 }
+
 input[type=button]  {
-  float: left;
-  padding: 36px 0;
+  padding: 0px 0;
   margin: 0;
   background:orange;
     border: none;
@@ -157,23 +159,11 @@ input[type=button]  {
   font-weight: 700;
   color: black;
   cursor: pointer;
-    border-bottom: 2px solid #111;
-}
-@media only screen and (max-height: 667px) {
-  input[type=button]{
-    padding: 29px;
-    font-size: 22px;
-  }
-}
-
-@media only screen and (max-width: 330px) {
-  input[type=button]{
-    padding: 22px;
-  }
+  border-bottom: 2px solid #111;
 }
 .buttons{
-  padding-top: 0px;
-  display: grid;
-  grid-template-columns:auto auto auto auto;
-grid-template-rows: 25% 25% 25% 25% 25%;
+  height: 80%;
+  display:grid;
+  grid-template-rows: auto auto auto auto auto;
+  grid-template-columns: auto auto auto auto;
 }
